--- a/index.html
+++ b/index.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egy szuper oldal </title>
+    <title>Egységes Ügyintézői Felület</title>
 </head>
+
 <body>
-   <h1>Fantastic Burger</h1> 
-   <ul>
-       <li>
-           meat lover
-           <ul>
-               <li>Beef</li>
-               <li>Pork</li>
-               <li>Turkey</li>
-           </ul>
-        </li>
-       <li>vegetarian</li>
-       <li>meat balls</li>
-       <li>chesse burger</li>
-       <li>Mexican</li>
-   </ul>
-   <h2>Additions</h2>
-   <ol>
-       <li>Tomato</li>
-       <li>Apple</li>
-       <li>Sausage</li>
-       <li>Hot chilli sause</li>
-   </ol>
+        <table>
+        
+            <caption> <strong>Üdvözöllek az Egységes Ügyintézői Felületen!</strong> </caption>
+                <thead>
+            <tr>
+                <th>Egyetemes szolgáltatás</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>
+                    <a target="blank" href="asz/asz.html"><img width="195" height="195" src="img/esz_aram.jpg"
+                            alt="Áramszolgáltatás"></a>
+                    <a target="blank" href="gsz/gaz.html"><img width="195" height="195" src="img/esz_gaz.JPG"
+                            alt="Földgázszolgáltatás"></a>
+                    <a target="blank" href="kommunalis/kommunalis.html"><img width="195" height="195"
+                            src="img/kommunalis.jpg" alt="Kommunális"></a>
+                    <a target="blank" href="tavho/tavho.html"><img width="195" height="195" src="img/tavho.JPG"
+                            alt="Távhő"></a>
+                    <a target="blank" href="vizmu/vizmu.html"><img width="195" height="195" src="img/vizmu.jpg"
+                            alt="Vízmű"></a>
+                </th>
+            </tr>
+        </tbody>
+        <thead>
+            <tr>
+                <th>Elosztási tevékenység</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>
+                    <a target="blank" href="asz_elo/asz_elo.html"><img width="390" height="187" src="img/asz_elo.JPG"
+                            alt="Villamosenergia-elosztás"></a>
+                    <a target="blank" href="gsz_elo/gsz_elo.html"><img width="390" height="187" src="img/gsz_elo.JPG"
+                            alt="Földgázelosztás"></a>
+                </th>
+            </tr>
+        </tbody>
+        <thead>
+            <tr>
+                <th>Egyéb szolgáltatások</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>
+                    <a target="blank" href="kozvilagitas/kozvil.html"><img width="195" height="187"
+                            src="img/kozvilagit.JPG" alt="Közvilágítás"></a>
+                    <a target="blank" href="mobiliti/mobiliti.html"><img width="195" height="187" src="img/mobiliti.JPG"
+                            alt="Mobiliti"></a>
+                    <a target="blank" href="napelem/napelem.html"><img width="195" height="187" src="img/napelem.JPG"
+                            alt="Napelem"></a>
+                </th>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>&copy;2020 JoJó Kft. és Nemzeti Közművek</td>
+            </tr>
+        </tfoot>
 
-   <a href="https://makeyourmeals.com/best-homemade-grilled-hamburgers/">Grilled burgers</a>
-<a href="pages/orders.html">Orders</a>
-<a target="blank" href="https://makeyourmeals.com/best-homemade-grilled-hamburgers/"><img width="56" src="img/grilled-hamburger-1.jpg" alt="tasty burger"></a>
-
+    </table>
 </body>
+
 </html>
