--- a/tavho/tavho.html
+++ b/tavho/tavho.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Távhő</title>
 </head>
 <body>
-    <h1>About</h1>
-    <a href="index.html">Home</a>
+    
 </body>
 </html>
